--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
-    implementation 'androidx.security:security-crypto:1.0.0-rc02'
+    implementation 'androidx.security:security-crypto:1.0.0-alpha01'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
 }
