add calendar view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         </activity>
         <activity android:name=".security.SecurityActivity" />
         <activity android:name=".event.EventActivity" />
+        <activity android:name=".CustomViewActivity" />
+        <activity android:name=".calendar.CalendarActivity" />
     </application>
 
 </manifest>
